test/functions/fcf/ExplicitAnonFormalInNamedProc.good
ExplicitAnonFormalInNamedProc.chpl:2: In function 'foo':
ExplicitAnonFormalInNamedProc.chpl:2: error: formals in a procedure definition must be named
ExplicitAnonFormalInNamedProc.chpl:2: error: formals in a procedure definition must be named
