test/functions/fcf/ExplicitAnonFormalInNamedProc.chpl
proc test() {
  proc foo(_: int, _: int) {}
}
test();
